frame/support/test/tests/pallet_ui/call_weight_inherited_invalid2.stderr
error: expected `=`
  --> tests/pallet_ui/call_weight_inherited_invalid2.rs:19:30
   |
19 |     #[pallet::call(weight(prefix))]
   |                                 ^
